--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry excluding="src/|hsqldb/" kind="src" path=""/>
 	<classpathentry kind="lib" path="javax.servlet-2.4.0.jar"/>
 	<classpathentry kind="lib" path="hsqldb"/>
+	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
